--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* reset css */
 :root{
-    --theme-colour: #dc143c;
+    --theme-color:#eb3b5a;
    
 
 }
@@ -57,14 +57,54 @@ h5{
 h6{
     font-size: 0.9rem;
 }
+.pt-100{
+  padding-top: 10rem;
+}
+.pb-100{
+  padding-bottom: 10rem;
+}
+/* common section-title */
+.section-title p{
+  color: var(--theme-color);
+}
+.card-row{
+  padding-top: 8rem;
+ }
+/* common-btn */
+.common-btn{
+  font-size: 1.4rem;
+  background-color: var(--theme-color);
+  color: #fff;
+  outline: none;
+  border: none;
+  padding: .7rem 1.5rem;
+
+}
+.common-btn:hover{
+  background-color:#e4045a;
+  color: #fff;
+}
 /* header css */
 .info{
-    background-color: var(--theme-colour);
+    background-color: var(--theme-color);
     height: 4rem;
     font-size: 1.2rem;
 }
 .info p, .info a{
     font-size: 1.2rem;
+}
+
+.nav-line {
+  position: relative;
+}
+.nav-line:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: .1rem;
+  background-color: var(--theme-color);
+  left: 0;
+  bottom: 0;
 }
 .banner {
     background-image: linear-gradient(rgba(0,0,0,.75), rgba(0,0,0,.75)), url('../images/banner/banner-img.jpg');
@@ -82,7 +122,7 @@ h6{
 	
 } 
 .banner-text h1{
-    color: var(--theme-colour);
+    color: var(--theme-color);
     font-size: 5rem;
     padding-bottom: 1rem;
 }
@@ -103,9 +143,8 @@ h6{
     align-items: center;
     text-align: center;
     z-index: 999;
-    transition: .3s;
     visibility: hidden;
-    transition: 1s;
+    transition: .8s;
 }
 .menu ul li {
   padding-bottom: 1rem;
@@ -121,7 +160,7 @@ h6{
 .menu ul li a::after {
 	content: "";
 	position: absolute;
-	background-color: var(--theme-colour);
+	background-color: var(--theme-color);
 	width: 0;
 	height: .2rem;
 	left: 0;
@@ -142,14 +181,14 @@ h6{
 }
 .login-btn {
     color: #fff;
-    border: .1rem solid var(--theme-colour);
+    border: .1rem solid var(--theme-color);
     margin: 0 1rem;
     border-radius: 2rem;
     padding: .5rem 1rem;
     position: relative;
   }
 .login-btn:hover {
-    border-color: var(--theme-colour);
+    border-color: var(--theme-color);
     color: #fff;
   }
 .login-btn::before {
@@ -182,7 +221,46 @@ h6{
     cursor: pointer;
     padding-right: 7rem;
   }
-  
+  /* about css */
+ .about-icon {
+	font-size: 2.5rem;
+	padding: 1.2rem;
+	border-radius: 50%;
+	color: #fff;
+}
+.icon-bg-1{
+  background: linear-gradient(to right, rgba(255,93,177,1) 50%, rgba(239,1,124,1) 50%);
+}
+.icon-bg-2{
+  background: linear-gradient(to right, rgba(210,255,82,1) 50%, rgba(145,232,66,1) 50%);
+}
+.icon-bg-3{
+  background: linear-gradient(to right, rgba(255,175,77,1) 50%, rgba(255,145,10,1) 50%);
+}
+.card-text{
+  font-size: 1.4rem;
+}
+/* places css */
+.card-image {
+	position: relative;
+	top: -2.5rem;
+  box-shadow: 10px 10px 32px 0px rgba(0,0,0,0.57);;
+}
+.places-title{
+  color: var(--theme-color);
+
+}
+/* services css */
+
+.service-card{
+  font-size: 1.5rem;
+  background-color:var(--theme-color);
+  color: #fff;
+}
+.service-card i{
+  font-size: 2.5rem;
+  color: #e8bc4d;
+}
 /* footer css */
 footer{
     background-color:#dcdde1;
@@ -204,7 +282,7 @@ h4.footer-heading {
     content: "";
     height: .2rem;
     width: 5rem;
-    background-color: var(--theme-colour);
+    background-color: var(--theme-color);
     bottom: -32%;
     left: 0%;
   }
@@ -212,19 +290,22 @@ h4.footer-heading {
 	list-style: disclosure-closed;
 }
 .footer-copy-text {
-	color: var(--theme-colour);
+	color: var(--theme-color);
 	height: 6vh;
 	font-size: 1rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-.footer-btn, .footer-btn:hover {
+.footer-btn {
 	margin-top: 5rem;
-	color: var(--theme-colour);
-	background-color: #000;
+	color: var(--theme-color);
+	background-color: #010203;
 	padding: 1rem 1.5rem;
 	font-size: 1.4rem;
   outline: none;
   border: none;
+}
+.footer-btn:hover{
+  color: #fff;
 }
