--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,133 @@ h6{
   background-color:#e4045a;
   color: #fff;
 }
+/* login-register css */
+
+.clear{
+	clear: both;
+}
+
+.main{
+	width: 100%;
+	height: 100vh;
+	background-color: #0A0A0A;
+}
+
+.login-register-card{
+	width: 400px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+
+.login-register-card-title{
+	width: 100%;
+}
+
+.login-register-card-title h3{
+	color: var(--theme-color);
+	text-align: center;
+	padding: 20px 0;
+	font-weight: 500;
+}
+
+.login-register-card-title h3 > span{
+	color: #848484;
+}
+
+.login-register-card-body{
+	background-color: #121212;
+	padding: 10px 0px;
+	border-radius: 5px;
+	width: 100%;
+	height: 350px;
+	overflow: hidden;
+}
+
+.login-register-card-body-top{
+	width: 100%;
+	position: relative;
+	border-bottom: 1px solid #262626;
+}
+
+.login-register-card-body-top > .btn{
+	border: 0;
+	background-color: transparent;
+	color: #848484;
+	font-size: 16px;
+	letter-spacing: 1px;
+	font-weight: 500;
+	width: 180px;
+	padding: 20px 0;
+}
+
+#login{
+	color: var(--theme-color);
+}
+
+#register{
+	color: #848484;
+}
+
+
+#pointer-btn{
+	position: absolute;
+	bottom:-1px;
+	left: 30px;
+	width: 120px;
+	height: 2px;
+	background-color: var(--theme-color);
+	transition: 0.5s all ease;
+}
+
+
+
+.card-body-login{
+	width: 100%;
+	padding: 15px 20px;
+	position: relative;
+}
+
+.card-body-login > #login-form{
+	position: absolute;
+	top: 30px;
+	left: 25px;
+	text-align: center;
+	transition: 0.5s all ease;
+}
+
+.card-body-login > #register-form{
+	position: absolute;
+	top: 20px;
+	left: 450px;
+	text-align: center;
+	transition: 0.5s all ease;
+}
+
+.input-form{
+	border: none;
+	background-color: transparent;
+	color: #fff;
+	border-bottom: 1px solid var(--theme-color);
+	width: 350px;
+	padding: 15px 0px;
+	font-size: 15px;
+	letter-spacing: 1px;
+	outline: none;
+}
+
+.submit-form{
+	background-color: var(--theme-color);
+	border: none;
+	padding: 10px 25px;
+	font-size: 15px;
+	cursor: pointer;
+	letter-spacing: 1px;
+	border-radius: 50px;
+}
+
+
 /* header css */
 .info{
     background-color: var(--theme-color);
