--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,5 @@
  /* X-Small devices (portrait phones, less than 576px) */
-@media (max-width: 576px) { 
+/* @media (max-width: 576px) { 
   html{
    font-size:58.5%
   }
@@ -9,6 +9,10 @@
   .banner-text h1 {
 	font-size: 3.5rem;
 }
+.logo{
+   display: flex;
+   align-items: center;
+}
 .menu ul li a{
    font-size: 1.8rem;
 }
@@ -16,28 +20,36 @@
 	margin-right: -7rem;
 }
 .search-field {
-	width: 14rem;
+	width: 14rem; 
 	
 }
-h1{
+ h1{
    font-size: 3rem;
 }
 p{
    font-size: 1.4rem;
 }
-}
+} */
 
 /*  Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
    .form {
       margin-right: -8rem;
    }
+   .banner-text h1 {
+      font-size: 4.5rem;
+   }
+   .right-side {
+      flex-basis: 60%;
+    }
    
  }
 
  /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
-
+   .right-side {
+      flex-basis: 60%;
+    }
  }
 
  /* Large devices (desktops, 992px and up) */
