--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ h6{
 .card-row{
   padding-top: 8rem;
  }
-/* common-btn */
+/* btn css */
 .common-btn{
   font-size: 1.4rem;
   background-color: var(--primary-color);
@@ -216,7 +216,9 @@ h6{
 .info p, .info a{
     font-size: 1.2rem;
 }
-
+.form {
+	margin-right: -89rem;
+}
 .nav-line {
   position: relative;
 }
@@ -236,7 +238,25 @@ h6{
     background-size: cover;
     background-position: center;
 }
-
+/* ---- */
+header{
+  position: fixed;
+  
+}
+.header-fixed {
+  /* position: absolute; */
+  left: 0;
+  right: 0;
+  z-index: 999;
+}
+.header-area {
+  padding: 15px 0;
+}
+nav {
+	display: flex;
+	justify-content: space-between;
+}
+/* ---- */
 .banner-text {
     position: absolute;
     top: 50%;
@@ -248,61 +268,33 @@ h6{
     color: var(--primary-color);
     font-size: 5rem;
     padding-bottom: 1rem;
+    font-size: 5rem;
 }
 .logo{
   font-size: 2.5rem;
+  margin-right: .5rem;
 }
-.menu {
-    position: absolute;
-    background-color: #333;
-    width: 100%;
-    height: 90vh;
-    opacity: 1;
-    top:-0;
-    right: -100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    z-index: 1000;
-    transition: .8s;
-    
+.sticky{
+  background-color:var(--primary-color);
+  top: 0;
 }
-.menu ul li {
-  padding-bottom: 1rem;
-  
-}
-.menu ul li a {
-  color: #fff;
- display: inline-block;
-  font-size: 2rem;
-  text-transform: uppercase;
-  position: relative;
-}
-.menu ul li a::after {
-	content: "";
-	position: absolute;
-	background-color: var(--primary-color);
-	width: 0;
-	height: .2rem;
-	left: 0;
-	bottom: 0;
-  transition: width 0.5s;
-}
-.menu ul li a:hover::after{
-  width: 100%;
+.right-side {
+  display: flex;
+  flex-basis: 50%;
+  padding: 5px;
 }
 .search-field{
   max-width: 100%;
 }
 .search-icon {
-    font-size: 1.5rem;
-    align-items: center;
-    justify-content: center;
-    display: flex;
+	font-size: 2rem;
+	align-items: center;
+	justify-content: center;
+	display: flex;
 }
 .login-btn {
-    color: #fff;
+    background-color: #fff;
+    color: var(--primary-color);
     border: .1rem solid var(--primary-color);
     margin: 0 1rem;
     border-radius: 2rem;
@@ -312,6 +304,7 @@ h6{
 .login-btn:hover {
     border-color: var(--primary-color);
     color: #fff;
+    background-color: var(--primary-color);
   }
 .login-btn::before {
     content: "";
@@ -331,7 +324,45 @@ h6{
     left:2.4rem;
     bottom: -.1rem;
 }
+.menu {
+  position: absolute;
+  background-color: #333;
+  width: 100%;
+  height: 90vh;
+  top:-0;
+  right: -100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 1000;
+  transition:.8s; 
+}
+.menu ul li {
+padding-bottom: 1rem;
+position: relative;  
+}
+.menu ul li a {
+color: #fff;
+display: inline-block;
+font-size: 2rem;
+text-transform: uppercase;
+position: relative;
+}
+.menu ul li a::after {
+content: "";
+position: absolute;
+background-color: var(--primary-color);
+width: 0;
+height: .2rem;
+left: 0;
+bottom: 0;
+transition: width 0.5s;
+}
 
+.menu ul li a:hover::after{
+  width: 100%;
+}
   .close-menu {
     color: #fff;
     position: absolute;
@@ -341,7 +372,7 @@ h6{
 }
   .menu-icon{
     cursor: pointer;
-    padding-right: 7rem;
+    /* padding-right:; */
   }
   /* about css */
   
