--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,68 +1,48 @@
- /* X-Small devices (portrait phones, less than 576px) */
-/* @media (max-width: 576px) { 
-  html{
-   font-size:58.5%
-  }
-  p{
-   font-size: 1.5rem;
-  }
-  .banner-text h1 {
-	font-size: 3.5rem;
+/* Medium Layout: 1280px. */
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+   
 }
-.logo{
-   display: flex;
-   align-items: center;
+
+
+/* Tablet Layout: 768px. */
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+   html{
+      font-size: 61%;
+   }
+
 }
-.menu ul li a{
-   font-size: 1.8rem;
+
+/* Mobile Layout: 320px. */
+
+@media only screen and (max-width: 767px) {
+ html{
+   font-size: 58%;
+ }
+ .right-side {
+	flex-basis: 70%;
 }
-.form {
-	margin-right: -7rem;
+.menu-icon {
+	font-size: 2rem;
+	margin-right: 0.3rem;
+}
+.search-icon {
+	font-size: 1.5rem;
 }
 .search-field {
-	width: 14rem; 
-	
+	padding: .5rem;
 }
- h1{
-   font-size: 3rem;
+.banner-text h1 {
+	font-size: 4.5rem;
 }
-p{
-   font-size: 1.4rem;
-}
-} */
-
-/*  Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) { 
-   .form {
-      margin-right: -8rem;
-   }
-   .banner-text h1 {
-      font-size: 4.5rem;
-   }
-   .right-side {
-      flex-basis: 60%;
-    }
-   
+.single-about {
+   margin:0 1rem 2rem;
  }
-
- /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) { 
-   .right-side {
-      flex-basis: 60%;
-    }
- }
-
- /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
-
- }
-
- /* X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { 
 
 }
 
- /* XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) { 
 
- }
+/* Wide Mobile Layout: 480px. */
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {}
