--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ html{
 body{
     /* font-family: 'Poppins', sans-serif; */
     font-family: 'Arima', cursive;
+    background-color: #dcdde1;
 }
 a{
     text-decoration: none;
@@ -57,13 +58,16 @@ h5{
 h6{
     font-size: 0.9rem;
 }
-.pt-100{
-  padding-top: 10rem;
+.pt-80{
+  padding-top: 8rem;
 }
-.pb-100{
-  padding-bottom: 10rem;
+.pb-80{
+  padding-bottom: 8rem;
 }
 /* common section-title */
+.section-title{
+  padding-bottom: 6rem;
+}
 .section-title p{
   color: var(--primary-color);
 }
@@ -256,20 +260,7 @@ nav {
 	display: flex;
 	justify-content: space-between;
 }
-/* ---- */
-.banner-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-	
-} 
-.banner-text h1{
-    color: var(--primary-color);
-    font-size: 5rem;
-    padding-bottom: 1rem;
-    font-size: 5rem;
-}
+
 .logo{
   font-size: 2.5rem;
   margin-right: .5rem;
@@ -280,11 +271,12 @@ nav {
 }
 .right-side {
   display: flex;
-  flex-basis: 50%;
+  flex-basis: 40%;
   padding: 5px;
 }
-.search-field{
-  max-width: 100%;
+.search-field {
+	max-width: 100%;
+	padding: .7rem;
 }
 .search-icon {
 	font-size: 2rem;
@@ -328,9 +320,9 @@ nav {
   position: absolute;
   background-color: #333;
   width: 100%;
-  height: 90vh;
-  top:-0;
-  right: -100vw;
+  height: 100vh;
+  top:0;
+  right:-100vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -372,8 +364,22 @@ transition: width 0.5s;
 }
   .menu-icon{
     cursor: pointer;
-    /* padding-right:; */
+   font-size: 2rem;
   }
+  /* ---- */
+.banner-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+} 
+.banner-text h1{
+  color: var(--primary-color);
+  font-size: 5rem;
+  padding-bottom: 1rem;
+  font-size: 5rem;
+}
   /* about css */
   
  .about-icon {
@@ -393,6 +399,18 @@ transition: width 0.5s;
 }
 .card-text{
   font-size: 1.4rem;
+}
+.card-body h3 {
+	padding: 2rem 0 1rem;
+}
+.single-about {
+  width: 38rem;
+  margin-right: 2rem;
+  background-color: #fff;
+	box-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+}
+.single-about:hover{
+  box-shadow: 0 0 5px rgba(0,0,0,0.7);
 }
 /* places css */
 .card-image {
