--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,11 @@ html{
     font-size: 62.5%;
     scroll-behavior: smooth;
 }
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Arima:wght@400;500;600;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap'); 
+/* @import url('https://fonts.googleapis.com/css2?family=Arima:wght@400;500;600;700&display=swap'); */
 body{
-    /* font-family: 'Poppins', sans-serif; */
-    font-family: 'Arima', cursive;
-    background-color: #dcdde1;
+     font-family: 'Poppins', sans-serif; 
+    /* font-family: 'Arima', cursive; */
 }
 a{
     text-decoration: none;
@@ -257,7 +256,7 @@ header{
   z-index: 999;
 }
 .header-area {
-  padding: 15px 0;
+  padding: 2rem 0;
 }
 nav {
 	display: flex;
@@ -269,7 +268,7 @@ nav {
   margin-right: .5rem;
 }
 .sticky{
-  background-color:var(--primary-color);
+  background-color:#333;
   top: 0;
 }
 .right-side {
@@ -288,37 +287,39 @@ nav {
 	display: flex;
 }
 .login-btn {
-    background-color: #fff;
-    color: var(--primary-color);
-    border: .1rem solid var(--primary-color);
-    margin: 0 1rem;
-    border-radius: 2rem;
-    padding: .5rem 1rem;
-    position: relative;
-  }
+	background: transparent;
+	color: var(--primary-color);
+	border: .1rem solid var(--primary-color);
+	margin: 0 1rem;
+	border-radius: 2rem;
+	padding: 1rem;
+	position: relative;
+	width: 7rem;
+	height: 3.5rem;
+}
 .login-btn:hover {
     border-color: var(--primary-color);
     color: #fff;
     background-color: var(--primary-color);
   }
-.login-btn::before {
+  .login-btn::before {
     content: "";
     position: absolute;
-    width: 1.2rem;
+    width: 1.5rem;
     height: .1rem;
     background-color: #fff;
-    right:2.4rem;
+    right: 1.2rem;
     top: -.1rem;
-}
-.login-btn::after {
+  }
+  .login-btn::after {
     content: "";
     position: absolute;
-    width: 1.2rem;
+    width: 1.5rem;
     height: .1rem;
     background-color: #fff;
-    left:2.4rem;
+    left: 1.4rem;
     bottom: -.1rem;
-}
+  }
 .menu {
   position: absolute;
   background-color: #333;
@@ -380,7 +381,7 @@ transition: width 0.5s;
   color: var(--primary-color);
 }
 .banner-text h1{
-  color:#fff;
+  color:var(--primary-color);
   font-size: 5rem;
   padding-bottom: 1rem;
   font-size: 5rem;
@@ -407,9 +408,21 @@ transition: width 0.5s;
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.7);
   transition: .3s;
 }
-
 .single-about:hover{
   box-shadow: 0 0 3.5rem rgba(0,0,0,0.7);
+}
+.single-about-1:hover{
+ background-color: rgb(233, 182, 209);
+}
+.single-about-2:hover{
+ background-color:  rgb(218, 242, 152);
+}
+.single-about-3:hover{
+ background-color: rgb(246, 198, 139);
+}
+
+.single-about h3{
+  margin: 1rem 0 1.5rem;
 }
 
 /* places css */
@@ -420,6 +433,7 @@ transition: width 0.5s;
 }
 .places-card:hover{
   box-shadow: 0 0 3.5rem rgba(0,0,0,0.7);
+  transform: scale(1.1);
 }
 .places-card p {
 	color: #000;
